database working properly

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,11 +19,11 @@
             <form class="login-form">
                 <div class="username">
                     <label for="username">Name</label>
-                    <input type="text" class="name" placeholder="username">
+                    <input type="text" class="name" name="username" placeholder="username">
                 </div>
                 <div class="pwd">
                     <label for="password">Password</label>
-                    <input type="text" class="password" placeholder="password">
+                    <input type="text" class="password" name="password" placeholder="password">
                 </div>
                 <div class="text-center loginBtn">
                     <button class="btn btn-primary">Login</button>
@@ -35,11 +35,11 @@
             <form class="register-form">
                 <div class="username">
                     <label for="username">Username</label>
-                    <input type="text" class="registered-name" placeholder="username">
+                    <input type="text" name="username" class="registered-name" placeholder="username">
                 </div>
                 <div class="pwd">
                     <label for="password">New Password</label>
-                    <input type="text" class="registered-password" placeholder="password">
+                    <input type="text" name="password" class="registered-password" placeholder="password">
                 </div>
                 <div class="text-center registerBtn">
                 <button class="btn btn-warning">Register</button>
